# swarms

./: 404.html  index.html  pyproject.toml  requirements.txt
.github/workflows/: autofix.yml  lint.yml
ReleaseNotes/: index.html
applications/customer_support/: index.html
applications/discord/: index.html
applications/enterprise/: index.html
applications/marketing_agencies/: index.html
contributing/: index.html
corporate/architecture/: index.html
corporate/bounties/: index.html
corporate/checklist/: index.html
corporate/cost_analysis/: index.html
corporate/data_room/: index.html
corporate/demos/: index.html
corporate/design/: index.html
corporate/distribution/: index.html
corporate/failures/: index.html
corporate/faq/: index.html
corporate/flywheel/: index.html
corporate/front_end_contributors/: index.html
corporate/hiring/: index.html
corporate/metric/: index.html
corporate/purpose/: index.html
corporate/research/: index.html
corporate/roadmap/: index.html
corporate/swarm_cloud/: index.html
corporate/swarm_memo/: index.html
diy_your_own_agent/: index.html
docker_setup/: index.html
ecosystem/: index.html
examples/: index.html
examples/bingchat/: index.html
examples/flow/: index.html
examples/ideas/: index.html
examples/omni_agent/: index.html
examples/reliable_autonomous_agents/: index.html
examples/revgpt/: index.html
examples/stacked_worker/: index.html
examples/worker/: index.html
features/20swarms/: index.html
features/SMAPS/: index.html
features/agent_archive/: index.html
features/fail_protocol/: index.html
features/human_in_loop/: index.html
features/info_sec/: index.html
features/promptimizer/: index.html
features/shorthand/: index.html
limits_of_individual_agents/: index.html
scripts/: lock.py
search/: search_index.json
swarms/: index.html
swarms/agents/abstractagent/: index.html
swarms/agents/idea_to_image/: index.html
swarms/agents/message/: index.html
swarms/agents/omni_agent/: index.html
swarms/agents/omnimodalagent/: index.html
swarms/agents/toolagent/: index.html
swarms/agents/workeragent/: index.html
swarms/chunkers/basechunker/: index.html
swarms/chunkers/pdf_chunker/: index.html
swarms/memory/azure_openai/: index.html
swarms/memory/diy_memory/: index.html
swarms/memory/pg/: index.html
swarms/memory/pinecone/: index.html
swarms/memory/qdrant/: index.html
swarms/memory/short_term_memory/: index.html
swarms/memory/weaviate/: index.html
swarms/models/: index.html
swarms/models/anthropic/: index.html
swarms/models/base_llm/: index.html
swarms/models/base_multimodal_model/: index.html
swarms/models/bingchat/: index.html
swarms/models/biogpt/: index.html
swarms/models/custom_model/: index.html
swarms/models/dalle3/: index.html
swarms/models/distilled_whisperx/: index.html
swarms/models/elevenlabs/: index.html
swarms/models/fuyu/: index.html
swarms/models/gemini/: index.html
swarms/models/gpt4v/: index.html
swarms/models/hf/: index.html
swarms/models/huggingface/: index.html
swarms/models/idefics/: index.html
swarms/models/kosmos/: index.html
swarms/models/layoutlm_document_qa/: index.html
swarms/models/mistral/: index.html
swarms/models/mixtral/: index.html
swarms/models/mpt/: index.html
swarms/models/nougat/: index.html
swarms/models/openai/: index.html
swarms/models/openai_chat/: index.html
swarms/models/openai_tts/: index.html
swarms/models/vilt/: index.html
swarms/models/vllm/: index.html
swarms/models/zephyr/: index.html
swarms/models/zeroscope/: index.html
swarms/structs/abstractswarm/: index.html
swarms/structs/agent/: index.html
swarms/structs/artifact/: index.html
swarms/structs/artifactupload/: index.html
swarms/structs/autoscaler/: index.html
swarms/structs/basestructure/: index.html
swarms/structs/baseworkflow/: index.html
swarms/structs/concurrentworkflow/: index.html
swarms/structs/conversation/: index.html
swarms/structs/groupchat/: index.html
swarms/structs/groupchatmanager/: index.html
swarms/structs/json/: index.html
swarms/structs/majorityvoting/: index.html
swarms/structs/nonlinearworkflow/: index.html
swarms/structs/recursiveworkflow/: index.html
swarms/structs/sequential_workflow/: index.html
swarms/structs/stackoverflowswarm/: index.html
swarms/structs/stepinput/: index.html
swarms/structs/swarmnetwork/: index.html
swarms/structs/task/: index.html
swarms/structs/taskinput/: index.html
swarms/structs/taskqueuebase/: index.html
swarms/structs/workflow/: index.html
swarms/utils/check_device/: index.html
swarms/utils/display_markdown_message/: index.html
swarms/utils/extract_code_from_markdown/: index.html
swarms/utils/find_image_path/: index.html
swarms/utils/limit_tokens_from_string/: index.html
swarms/utils/load_model_torch/: index.html
swarms/utils/math_eval/: index.html
swarms/utils/metrics_decorator/: index.html
swarms/utils/pdf_to_text/: index.html
swarms/utils/prep_torch_inference/: index.html
swarms/utils/print_class_parameters/: index.html
swarms/workers/: index.html
swarms/workers/abstract_worker/: index.html
swarms/workers/base/: index.html
swarms_bounty_system/: index.html
swarms_cloud/main/: index.html
swarms_cloud/migrate_openai/: index.html
why_swarms/: index.html
