[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "swarms"
version = "4.8.2"
description = "Swarms - Pytorch"
license = "MIT"
authors = ["Kye Gomez <kye@apac.ai>"]
homepage = "https://github.com/kyegomez/swarms"
documentation = "https://swarms.apac.ai"
readme = "README.md"
repository = "https://github.com/kyegomez/swarms"
keywords = [
    "artificial intelligence",
    "deep learning",
    "optimizers",
    "Prompt Engineering",
    "swarms",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = ">=2.1.1,<3.0"
transformers = ">= 4.39.0, <5.0.0"
asyncio = ">=3.4.3,<4.0"
backoff = "2.2.1"
toml = "*"
pypdf = "4.1.0"
ratelimit = "2.2.1"
loguru = "0.7.2"
pydantic = "2.6.4"
tenacity = "8.2.3"
Pillow = "10.2.0"
rich = "13.5.2"
psutil = "*"
sentry-sdk = "*"
python-dotenv = "*"
accelerate = "0.28.0"
opencv-python = "^4.9.0.80"
pyyaml = "^6.0.1"
supervision = "^0.19.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
requests = "^2.31.0"
colorama = "^0.4.6"
mmengine = "^0.10.3"
termcolor = "^2.4.0"
redis = "^5.0.3"
networkx = "^3.3"
diffusers = "^0.27.2"
cachetools = "^5.3.3"
langchain = "^0.1.16"
langchain-experimental = "^0.0.57"
ultralytics = "^8.2.0"
timm = "^0.9.16"
datasets = "^2.18.0"
soundfile = "^0.12.1"
langchain-community = "^0.0.33"
tiktoken = "^0.6.0"
tqdm = "^4.66.2"
llm = "^0.13.1"
openai = "^1.21.2"
sqlalchemy = "^2.0.29"
attrs = "^23.2.0"
pinecone-client = "^3.2.2"
sentence-transformers = "^2.7.0"
qdrant-client = "^1.8.2"
chromadb = "^0.4.24"
simsimd = "^4.3.1"
weaviate-client = "^4.5.5"
httpx = "^0.27.0"
optimum = "^1.19.0"
aiohttp = "^3.9.5"
scikit-image = "^0.23.1"
google-api-core = "^2.18.0"
# We are very much going in the wrong direction it turns out there were a bunch of dependencies that were used in the codebase but just never registered with poetry

[tool.poetry.group.lint.dependencies]
black = "^23.1.0"
ruff = ">=0.0.249,<0.3.5"
types-toml = "^0.10.8.1"
types-pytz = "^2023.3.0.0"
types-chardet = "^5.0.4.6"
mypy-protobuf = "^3.0.0"
deptry = "^0.16.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
termcolor = "^2.4.0"
pandas = "^2.2.2"
fastapi = "^0.110.1"

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []
fixable = ["ALL"]
unfixable = []
preview = true

[tool.ruff.lint.per-file-ignores]
"swarms/prompts/**.py" = ["E501"]

[tool.black]
line-length = 70
target-version = ['py38']
preview = true

[tool.deptry.per_rule_ignores]
DEP003 = ["swarms"]
