[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "swarms"
version = "4.8.2"
description = "Swarms - Pytorch"
license = "MIT"
authors = ["Kye Gomez <kye@apac.ai>"]
homepage = "https://github.com/kyegomez/swarms"
documentation = "https://swarms.apac.ai"
readme = "README.md"
repository = "https://github.com/kyegomez/swarms"
keywords = [
    "artificial intelligence",
    "deep learning",
    "optimizers",
    "Prompt Engineering",
    "swarms",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[tool.ruff]
line-length = 128

[tool.black]
line-length = 70
target-version = ["py38"]
preview = true

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
accelerate = "0.28.0"
aiohttp = "3.9.5"
asyncio = "3.4.3"
attrs = "23.2.0"
backoff = "2.2.1"
cachetools = "5.3.3"
chromadb = "0.4.24"
colorama = "0.4.6"
datasets = "2.18.0"
diffusers = "0.27.2"
google-api-core = "2.18.0"
httpx = "0.27.0"
langchain = "0.1.16"
langchain-community = "0.0.33"
langchain-experimental = "0.0.57"
llm = "0.13.1"
loguru = "0.7.2"
mmengine = "0.10.3"
networkx = "3.3"
numpy = "1.26.4"
openai = "1.21.2"
opencv-python = "4.9.0.80"
optimum = "1.19.0"
pandas = "2.2.2"
pinecone-client = "3.2.2"
psutil = "5.9.8"
pydantic = "2.6.4"
pypdf = "4.1.0"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
qdrant-client = "1.8.2"
ratelimit = "2.2.1"
redis = "5.0.3"
requests = "2.31.0"
rich = "13.5.2"
scikit-image = "0.23.1"
sentence-transformers = "2.7.0"
sentry-sdk = "1.45.0"
simsimd = "4.3.1"
soundfile = "0.12.1"
sqlalchemy = "2.0.29"
supervision = "0.19.0"
tenacity = "8.2.3"
termcolor = "2.4.0"
tiktoken = "0.6.0"
timm = "0.9.16"
toml = "0.10.2"
torch = "2.2.2"
tqdm = "4.66.2"
transformers = "4.39.3"
ultralytics = "8.2.0"
weaviate-client = "4.5.5"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []
fixable = ["ALL"]
unfixable = []
preview = true

[tool.deptry.per_rule_ignores]
DEP003 = ["swarms"]

[tool.ruff.lint.per-file-ignores]
"swarms/prompts/**.py" = ["E501"]

[tool.poetry.group.lint.dependencies]
black = "^23.1.0"
ruff = ">=0.0.249,<0.3.5"
types-toml = "^0.10.8.1"
types-pytz = "^2023.3.0.0"
types-chardet = "^5.0.4.6"
mypy-protobuf = "^3.0.0"
deptry = "^0.16.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
termcolor = "^2.4.0"
pandas = "^2.2.2"
fastapi = "^0.110.1"
